[gd_scene format=3 uid="uid://44d0atkgocpr"]

[ext_resource type="Script" uid="uid://bgg5oxfoqrg4i" path="res://Scripts/player_controller.gd" id="1_xy3dy"]
[ext_resource type="PackedScene" uid="uid://eot67sn8sc12" path="res://ImportMesh/leave_this_be.glb" id="2_xy3dy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d0k3e"]
radius = 0.818
height = 10.0

[node name="player" type="CharacterBody3D" unique_id=1524182027]
script = ExtResource("1_xy3dy")
input_left = "move_left"
input_right = "move_right"
input_forward = "move_up"
input_back = "move_down"

[node name="Head" type="Node3D" parent="." unique_id=1417715906]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.684995, -0.71618193)

[node name="Camera3D" type="Camera3D" parent="Head" unique_id=1663374707]
transform = Transform3D(1, 0, 0, 0, 0.9995336, 0.03053856, 0, -0.03053856, 0.9995336, 0, -0.14442396, -0.21334362)

[node name="InteractionRay" type="RayCast3D" parent="Head" unique_id=1827364951]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.16181064, 0)
target_position = Vector3(0, 0, -10)
collision_mask = 0

[node name="UI" type="CanvasLayer" parent="." unique_id=1938475062]

[node name="Crosshair" type="CenterContainer" parent="UI" unique_id=2049586173]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairDot" type="Label" parent="UI/Crosshair" unique_id=-2134270012]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 24
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractLabel" type="Label" parent="UI/Crosshair" unique_id=-2023158901]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 18
text = "Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1302230705]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5611916, 0)
shape = SubResource("CapsuleShape3D_d0k3e")

[node name="leave_this_be" parent="." unique_id=1819775504 instance=ExtResource("2_xy3dy")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)
